fixed button style on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -75,6 +75,12 @@ input {
     align-items: center;
     margin-top: 1rem;
     gap: 1rem;
+    flex-wrap: wrap;
+}
+
+.button-container button {
+    flex: 1;
+    min-width: 250px;
 }
 
 .add-recipient-btn {
